--- a/maslenitsa/index.html
+++ b/maslenitsa/index.html
@@ -148,31 +148,37 @@
                                         width="20" height="20">
                                     Первый блин – клевый!
                                 </button>
-                                <div class="result__swiper swiper col-12 col-md-10 mx-auto">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <a href="./images/results/result1.jpg" data-fancybox="result">
-                                                <img class="result__image" src="./images/results/result1.jpg"
-                                                    alt="Результат генерации" width="217" height="388">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="./images/results/result2.jpg" data-fancybox="result">
-                                                <img class="result__image" src="./images/results/result2.jpg"
-                                                    alt="Результат генерации" width="217" height="388">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="./images/results/result3.jpg" data-fancybox="result">
-                                                <img class="result__image" src="./images/results/result3.jpg"
-                                                    alt="Результат генерации" width="217" height="388">
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="./images/results/result4.jpg" data-fancybox="result">
-                                                <img class="result__image" src="./images/results/result4.jpg"
-                                                    alt="Результат генерации" width="217" height="388">
-                                            </a>
+                                <div class="col-12 col-md-10 mx-auto">
+                                    <div class="result__swiper swiper">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">
+                                                <a href="./images/results/result1.jpg" data-fancybox="result">
+                                                    <img class="result__image" src="./images/results/result1.jpg"
+                                                        alt="Результат генерации" width="217" height="388"
+                                                        loading="lazy">
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="./images/results/result2.jpg" data-fancybox="result">
+                                                    <img class="result__image" src="./images/results/result2.jpg"
+                                                        alt="Результат генерации" width="217" height="388"
+                                                        loading="lazy">
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="./images/results/result3.jpg" data-fancybox="result">
+                                                    <img class="result__image" src="./images/results/result3.jpg"
+                                                        alt="Результат генерации" width="217" height="388"
+                                                        loading="lazy">
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="./images/results/result4.jpg" data-fancybox="result">
+                                                    <img class="result__image" src="./images/results/result4.jpg"
+                                                        alt="Результат генерации" width="217" height="388"
+                                                        loading="lazy">
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
