structure & animation fixes

--- a/maslenitsa/index.html
+++ b/maslenitsa/index.html
@@ -313,7 +313,7 @@
                 <div class="container">
                     <div class="col-12 mx-auto">
                         <div class="recipes">
-                            <h2 class="recipes__title title">Наши хозяюшки доверяют этим рецептам.<br>Смотрите, как
+                            <h2 class="recipes__title title">Наши домашние кулинары доверяют этим рецептам.<br>Смотрите, как
                                 готовится любовь</h2>
                             <div class="recipes__row row g-3">
                                 <div class="col-12 col-md-4">
